# SolanaNftLoanPlatform

./: Anchor.toml  README.md  package-lock.json  package.json
programs/P2P_credit_platform/: Cargo.toml
programs/P2P_credit_platform/src/: accounting_book.rs  close_offer.rs  lib.rs  nft_transfer.rs  offer.rs  open_offer.rs  sol_transfer.rs
tests/: P2P_credit_platform.ts  test-book.ts  test-nft-transfer.ts  test-offer-modify.ts  test-sol-transfer.ts
